# growtopia.py

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-ubuntu.yml  build-windows.yml  build.yml  lint.yml  test-ubuntu.yml  test-windows.yml  test.yml
examples/client/simple_example/: __main__.py
examples/parser/simple_example/: __main__.py
examples/server/collection_example/: __main__.py
examples/server/simple_example/: __main__.py
growtopia/: __init__.py  __main__.py  _types.py  avatar.py  button_listener.py  client.py  collection.py  command.py  config.py  constants.py  context.py  dialog.py  dispatcher.py  enums.py  error_manager.py  event.py  event_pool.py  exceptions.py  extension.py  file.py  game_client.py  host.py  inventory.py  item.py  items_data.py  listener.py  login_server.py  obj_holder.py  player.py  player_net_funcs.py  player_pool.py  player_tribute.py  pool.py  server.py
growtopia/ABC/: __init__.py  abc_file.py  abc_type_enforcers.py
growtopia/clients/: __init__.py  client.py  client_net.py  game_client.py
growtopia/collection/: __init__.py
growtopia/command/: __init__.py
growtopia/context/: __init__.py  client_context.py  context.py  server_context.py
growtopia/decorators/: __init__.py  type_checker.py
growtopia/dialog/: __init__.py  dialog.py  dialog_element.py  dialog_return.py
growtopia/extension/: __init__.py
growtopia/extensions/: __init__.py  __init__.pyi  parser.pyx
growtopia/extensions/parse/: __init__.pyi  parse.pyx
growtopia/meta/: __init__.py  type_enforcer.py
growtopia/net/: __init__.py  _http.py  constants.py  dispatcher.py  enums.py  listener.py
growtopia/parsers/: __init__.py  constants.py  enums.py  item.py  items_data.py  pet_info.py  player_tribute.py  punch_options.py  seed_info.py  sit_info.py
growtopia/player/: __init__.py  player.py  player_avatar.py  player_login_info.py  player_net.py
growtopia/protocol/: __init__.py  enums.py  game_message_packet.py  game_packet.py  game_update_packet.py  hello_packet.py  packet.py  str_packet.py  text_packet.py  variant.py  variant_list.py
growtopia/servers/: __init__.py  game_server.py  server.py  server_player_pool.py  server_world_pool.py
growtopia/types/: basic.py
growtopia/utils/: __init__.py  ansi.py  buffer.py  compression.py  crypto.py  decipher.py  file.py  hash_.py  id_packet.py  logger.py  packer.py  packers.py  proton.py  setup.py
growtopia/world/: __init__.py  enums.py  tile.py  tile_extra.py  world.py  world_avatar_pool.py  world_generator.py  world_net.py  world_object.py  world_object_pool.py  world_player_pool.py  world_tile_pool.py
tests/: test_dialog.py  test_login.py  test_packer.py  test_packet.py  test_parser.py  test_parsers.py  test_protocol.py  test_server.py
(+16 files in other folders)
