[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "growtopia.py"
description = "A simple asynchronous API for Growtopia, capable of creating servers, clients, and more!"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

version = "0.1.3"
requires-python = ">=3.8.0"

dependencies = [
    "enet @ git+https://github.com/kajob-dev/pyenet",
    "aiofiles",
]

[project.urls]
"Homepage" = "https://github.com/kaJob-dev/growtopia.py"
"Bug Tracker" = "https://github.com/kaJob-dev/growtopia.py/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"