[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "growtopia.py"
description = "A simple asynchronous API for Growtopia, capable of creating servers, clients, and more!"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

version = "0.1.4"
requires-python = ">=3.12.0"

dependencies = [
    "enet @ git+https://github.com/biggus-developerus/pyenet",
    "packer-typed @ git+https://github.com/biggus-developerus/packer.typed.git",
    "aenum",
    "aiohttp",
    "bs4",
]

[project.urls]
"Homepage" = "https://github.com/biggus-developerus/growtopia.py"
"Bug Tracker" = "https://github.com/biggus-developerus/growtopia.py/issues"

[tool.black]
line-length = 100

[tool.isort]
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
line_length = 30